name:                play
version:             0.1.0.0
synopsis:            ICFP Contest 2015 Player
description:         Please see README.md
homepage:            http://github.com/bokesan/icfp2015
license:             BSD3
license-file:        LICENSE
author:              Christoph Breitkopf
maintainer:          chbreitkopf@gmail.com
-- copyright:           
category:            Games
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable play
  hs-source-dirs:      src
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  ghc-options:         -Wall
  build-depends:       base, bytestring, text, aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bokesan/icfp2015
